# func2svg

./: CMakeLists.txt  CMakePresets.json  Readme.md  main.cpp
include/: ImageProcess.h  ImageRestore.h  QuasiRegularModel.h  structs.h  topology.h
python/: graphVis.py  test.txt
src/: ImageProcess.cpp  ImageRestore.cpp  QuasiRegularModel.cpp  topology.cpp
